# Selqor-MCP-Forge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package-lock.json  pyproject.toml  selqor-forge.config.example.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: apis.json
docs/: AUTH_MODULE_INTEGRATION.md  PUBLIC_RELEASE_AUDIT.md  RELEASE_MATRIX.md
docs/assets/: forge-banner.html
e2e/: env.example
e2e/cases/github-issues/: case.yaml  openapi.subset.json
e2e/templates/: run.json
examples/petstore/: README.md  analysis-plan.json  baseline-quality.json  baseline-tool-plan.json  forge.report.json  summary.json  tool-plan.json  uasf.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py
npm/: README.md  package.json
scripts/: init_secret_key.py
src/dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/dashboard/frontend/src/: App.jsx  constants.js  main.jsx  theme.js
src/pages/Integrations/components/: SpecInputTabs.jsx
src/selqor_forge/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  logging_setup.py  models.py  templates.py
src/selqor_forge/dashboard/: __init__.py  app.py  context.py  db.py  mcp_client.py  middleware.py  models.py  playground_assertions.py  repositories.py  run_worker.py  secrets.py  streaming_pipeline.py
src/selqor_forge/dashboard/routes/: __init__.py  auth_routes.py  cicd.py  compliance.py  dashboard_api.py  integration_auth.py  integration_deploy.py  integration_runs.py  integration_tooling.py  integrations.py  llm_configs.py  llm_test.py  monitoring.py  notifications.py  org_routes.py  playground.py  registry.py  remediation.py  reports.py  run_jobs.py  scanner.py  settings.py  versions.py
src/selqor_forge/pipeline/: __init__.py  analyze.py  curate.py  generate.py  normalize.py  parse.py  score.py
src/selqor_forge/scanner/: __init__.py  cve_checker.py  discover.py  llm_judge.py  models.py  openapi_scanner.py  report_generator.py  rules_engine.py  scanner.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_heuristic_grouping.py  test_pipeline.py  test_rules_engine.py  test_scanner_discovery.py  test_scanner_runtime.py  test_templates.py
tests/fixtures/mcp/: petstore_http.py  petstore_stdio.py
tests/test_dashboard/: conftest.py  test_assets.py  test_auth_config.py  test_auth_routes.py  test_cicd.py  test_db_init.py  test_error_cases.py  test_integrations.py  test_llm_configs.py  test_mcp_client_integration.py  test_monitoring.py  test_notifications.py  test_org_routes.py  test_playground_assertions.py  test_playground_testcases.py  test_runs.py  test_settings.py  test_startup_safety.py  test_tooling.py
tools/: petstore_mcp_server.py  run_petstore_flow.py
(+49 files in other folders)
