# Copyright (c) Selqor Labs.
# Licensed under the Apache License, Version 2.0.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selqor-mcp-forge"
version = "0.1.1"
description = "Any App -> Curated MCP servers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Selqor Labs"},
]
maintainers = [
    {name = "Selqor Labs"},
]
keywords = ["mcp", "model-context-protocol", "openapi", "security", "agents", "tooling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
urls = { Homepage = "https://github.com/Selqor-Labs/Selqor-MCP-Forge", Documentation = "https://github.com/Selqor-Labs/Selqor-MCP-Forge#readme", Repository = "https://github.com/Selqor-Labs/Selqor-MCP-Forge", Issues = "https://github.com/Selqor-Labs/Selqor-MCP-Forge/issues" }
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "boto3>=1.35.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "inflection>=0.5.1",
    "python-multipart>=0.0.18",
    "cryptography>=44.0.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
    "mypy>=1.11",
    "ruff>=0.8.0",
    "mcp>=1.0.0",
]

[project.scripts]
selqor-mcp-forge = "selqor_forge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/selqor_forge"]

[tool.hatch.build.targets.sdist]
include = [
    "src/selqor_forge",
    "README.md",
    "LICENSE",
    "NOTICE",
    "SECURITY.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SUPPORT.md",
    "pyproject.toml",
]
exclude = [
    "tests",
    "benchmarks",
    "examples",
    "docs",
    "e2e",
    "scripts",
    "tools",
    "selqorLogos",
    "src/dashboard",
    ".tmp-*",
    "*.db",
    "*.sqlite*",
    "dashboard",
    "migrations",
    "docker-compose.yml",
    "Dockerfile",
    "alembic.ini",
    "selqor-mcp-forge.config.example.json",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
asyncio_default_fixture_loop_scope = "function"
